p3-semantics/tests/VarActualWritable.mj.err
 line 3, column 7: error: var actual must be a designator
