p3-semantics/tests/VarActualWritable.mj
const c = 0;
proc foo(var i: int) {
  foo(c);
}